Closed
Bug 224628
Opened 22 years ago
Closed 22 years ago
scrolling="no" (frame/iframe) does not remove the scrollbars anymore
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Core
Layout: Images, Video, and HTML Frames
Tracking
()
RESOLVED
FIXED
People
(Reporter: Peter6, Unassigned)
References
()
Details
(Keywords: regression)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20031103 Firebird/0.7+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20031103 Firebird/0.7+
for
<frame src="whatever.html" scrolling="no"> and
<iframe src="whatever.html" scrolling="no"></iframe>
the latests build , starting with 20031101 , do continue to display the scrollbar.
Setting the style overflow:hidden makes no difference.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Expected Results:
remove the scrollbars , that is what scrolling="no" is for
Comment 1•22 years ago
|
||
Confirming and reassigning to browser and All/All since this is also visible in
the MozillaSuite on linux.
URLs where this is visible:
http://www.cnn.com/2003/US/West/11/01/shark.attack.ap/index.html (the image of
the surfing woman) and
http://derstandard.at/ (the horizontal scrollbar under the HTML menu bar)
Status: UNCONFIRMED → NEW
Component: General → Layout
Ever confirmed: true
OS: Windows 2000 → All
Product: Firebird → Browser
Hardware: PC → All
Version: unspecified → Trunk
Comment 2•22 years ago
|
||
Peter, can you attach a simplified testcase please?
-> HTML Frames. > default owner and QA.
Assignee: blake → frame
Component: Layout → Layout: HTML Frames
Updated•22 years ago
|
Keywords: regression
Can we narrow down the time of the regression?
Comment 4•22 years ago
|
||
WORKS: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031030
Firebird/0.7+.
WORKS: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031031
Firebird/0.7+ (Gcc 3.3.1 i686 optimized - MozJF).
BROKEN: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031101
Firebird/0.7+ (DOMi/Venkman build by scragz).
BROKEN: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6a) Gecko/20031102
Firebird/0.7+ (Steffen).
I actually need the build IDs. Are there any builds early on 11/01 that work?
Also, if you build Mozilla, can you try backing out this patch and see if it
fixes the problem:
http://bugzilla.mozilla.org/attachment.cgi?id=133974&action=view
Comment 7•22 years ago
|
||
Build id? The timestamp Mozilla displays in the titlebar? It's not there in
Firebird. And it's neither in about: nor in about:buildconfig.
I've asked tor to back out that patch. The backout won't have any ill effects
other than making translucent IFRAMEs be too translucent for a while. It will
also fix the Tp regression. A better real fix to the underlying problem is in my
new patch in bug 212366.
Patch from comment 5 backed out.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 10•22 years ago
|
||
*** Bug 226086 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•