Bug 224628 - backout part of 212366 so that scrolling=no works. r+sr=roc