layout/html/document/src/nsFrameFrame.cpp
@@ -94,7 +94,6 @@
 #include "nsIRenderingContext.h"
 #include "nsIFrameFrame.h"
 #include "nsAutoPtr.h"
-#include "nsCSSAnonBoxes.h"
 
 // For Accessibility
 #ifdef ACCESSIBILITY
@@ -410,9 +409,9 @@ nsHTMLFrameOuterFrame::Init(nsIPresContext*  aPresContext,
     mFrames.SetFrames(firstChild);
     // Resolve the style context for the inner frame
     nsresult rv = NS_OK;
-    nsRefPtr<nsStyleContext> innerStyleContext
-      = aPresContext->ResolvePseudoStyleContextFor(aContent,
-        nsCSSAnonBoxes::mozAnonymousBlock, mStyleContext);
+    nsRefPtr<nsStyleContext> innerStyleContext;
+    innerStyleContext = aPresContext->ResolveStyleContextFor(mContent,
+                                                             mStyleContext);
     rv = firstChild->Init(aPresContext, mContent, this, innerStyleContext, nsnull);
     if (NS_FAILED(rv)){
       NS_WARNING( "Error initializing InnerFrame in nsHTMLFrameOuterFrame");
